Relax privacy for timeseries queries
